syntax = "proto3";
package xibc.core.types.v1;

option go_package = "github.com/bitdao-io/bitchain/x/xibc/types";

import "gogoproto/gogo.proto";
import "xibc/core/client/v1/genesis.proto";
import "xibc/core/packet/v1/genesis.proto";

// GenesisState defines the xibc module's genesis state.
message GenesisState {
  // Clients genesis state
  xibc.core.client.v1.GenesisState client_genesis = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"client_genesis\""
  ];
  // Packet genesis state
  xibc.core.packet.v1.GenesisState packet_genesis = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"packet_genesis\""
  ];
}
